@@ -37,6 +37,7 @@ Compilers:
   - ISO-latin1 characters in identifiers
   - uses of the (&) and (or) operators instead of (&&) and (||)
 - Experimental OCAMLCOMPPARAM for ocamlc and ocamlopt
+- PR#5571: incorrect ordinal number in error message
 
 Standard library:
 - PR#5986: new flag Marshal.Compat_32 for the serialization functions
